# big-parental-controls

./: .gitignore  DPIA.md  IMPLEMENTv2.md  PLANNING.md  README.md  default.nix  messages.mo  pyproject.toml  update_translations.sh
big-age-signal/: Cargo.toml
big-age-signal/src/: main.rs
big-parental-controls/.audit/: files_read.txt  mypy.txt  radon.txt  ruff_format.txt  ruff_lint.txt  vulture.txt
big-parental-controls/etc/xdg/autostart/: big-supervised-indicator.desktop
big-parental-controls/locale/: bg.po  big-parental-controls.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
big-parental-controls/usr/lib/big-parental-controls/: group-helper  time-check
big-parental-controls/usr/share/biglinux/parental-controls/: app.py  main.py  style.css  window.py  window.ui
big-parental-controls/usr/share/biglinux/parental-controls/locale/: big-parental-controls.pot
big-parental-controls/usr/share/polkit-1/actions/: br.com.biglinux.parental-controls.policy
big-parental-controls/usr/share/polkit-1/rules.d/: 50-big-parental-controls.rules
locale/: pt_BR.po
pkgbuild/: PKGBUILD  big-parental-controls.install
src/big_parental_controls/: __init__.py  __main__.py  window.py
src/big_parental_controls/core/: constants.py
src/big_parental_controls/services/: time_service.py
src/big_parental_controls/ui/pages/: app_filter_page.py  user_detail_page.py  users_page.py
(+45 files in other folders)
